# so_campaign_manager

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  versioneer.py
.github/workflows/: docs.yaml  lint.yaml  release.yaml  test.yaml
docs/: README.md  advanced_topics.rst  api.rst  api_complete.rst  architecture.rst  conf.py  developer_guide.rst  direction_null_test_workflow.md  faq.rst  index.rst  installation.rst  quickstart.rst  resources.rst  tutorial.rst  user_guide.rst  workflows.rst
docs/_static/: custom.css
examples/: campaign.toml  dag.yml  direction_null_test_config.toml  simple_run.py  timedelta_example.py
src/socm/: __main__.py  _version.py
src/socm/bookkeeper/: __init__.py  bookkeeper.py
src/socm/configs/: slurmise.toml
src/socm/configs/.radical/pilot/configs/: resource_so.json
src/socm/core/: __init__.py  models.py
src/socm/enactor/: __init__.py  base.py  dryrun_enactor.py  rp_enactor.py  simulated_enactor.py
src/socm/execs/: __init__.py  mapmaking.py  power_spectra.py
src/socm/planner/: __init__.py  base.py  ga_planner.py  heft_planner.py  l2ff_planner.py  random_planner.py
src/socm/resources/: __init__.py  perlmutter.py  tiger.py  universe.py
src/socm/utils/: __init__.py  const.py  misc.py  resources_config.json  states.py
src/socm/workflows/: __init__.py  ml_mapmaking.py  sat_simulation.py  spectra.py
src/socm/workflows/ml_null_tests/: __init__.py  base.py  day_night_null_test.py  direction_null_test.py  elevation_null_test.py  moon_close_null_test.py  moonrise_set_null_test.py  pwv_null_test.py  sun_close_null_test.py  time_null_test.py  wafer_null_test.py
src/socm/workflows/null_tests/: base.py  mission.py
tests/: conftest.py  simple.py  test_banner.py  test_bookkeeper.py  test_cli.py  test_core_models.py  test_core_models_mocked.py  test_dryrun_enactor.py  test_main.py  test_misc.py  test_perlmutter_resource.py  test_planner.py  test_planner_base.py  test_tiger_resource.py  test_universe_resource.py  test_utils.py  test_utils_const.py  test_utils_misc.py  test_utils_states.py  test_version.py  test_workflows.py  test_workflows_sat_simulation.py
tests/workflows/: conftest.py  test_direction_null_tests.py  test_dn_null_tests.py  test_elevation_null_tests.py  test_mlworkflows.py  test_moon_dist_null_tests.py  test_moonrise_null_test.py  test_null_test_base.py  test_pwv_null_tests.py  test_spectra.py  test_sun_dist_null_tests.py  test_time_null_tests.py  test_wafer_null_tests.py
