[project]
dynamic=["version"]
name="so_campaing_manager"
description = "A campaign manager to execute SO mapmaking campaign"
readme = 'README.md'
requires-python = '>=3.9'
authors = [
{name = 'Giannis Paraskevakos', email = 'iparask@princeton.edu'},
]
dependencies=["pydantic", 
              "numpy",
              "radical.pilot",
              "networkx",
              "toml",
              "click"]

[project.optional-dependencies]
dev = ["ruff", 
       "darker",
       "flake8",
       "isort",
       "pytest-cov>=2.6",
       "coveralls>=1.5",
       "pytest>=4.6"
]

[build-system]
requires = ["setuptools", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[tool.versioneer]
    VCS = "git"
    style = "pep440"
    versionfile_source = "src/socm/_version.py"
    versionfile_build = "socm/_version.py"
    tag_prefix = "v"
    parentdir_prefix = "socm-"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
# This installs the file with the package
"socm" = ["configs/*.toml"]

[project.scripts]
socm = "socm.__main__:main"
