[project]
dynamic = ["version"]
name = "so_campaing_manager"
description = "A campaign manager to execute SO mapmaking campaign"
readme = 'README.md'
requires-python = '>=3.11'
authors = [{ name = 'Giannis Paraskevakos', email = 'iparask@princeton.edu' }]
dependencies = [
    "pydantic>=2.0",
    "numpy",
    "radical.pilot",
    "networkx",
    "toml",
    "click",
    "sotodlib",
    "slurmise",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "darker",
    "flake8",
    "isort",
    "pytest-cov>=2.6",
    "coveralls>=1.5",
    "pytest>=4.6",
    "hypothesis",
]

[build-system]
requires = ["setuptools", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/socm/_version.py"
versionfile_build = "socm/_version.py"
tag_prefix = "v"
parentdir_prefix = "socm-"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
# This installs the file with the package
"socm" = ["configs/*.toml"]

[project.scripts]
socm = "socm.__main__:main"

[tool.coverage.run]
source_pkgs = ["socm", "tests"]
branch = true
parallel = true
omit = ["src/socm/_version.py"]

[tool.coverage.paths]
socm = ["src/socm", "*/so_mapmaking_campaign_manager/src/socm"]
tests = ["tests", "*/so_mapmaking_campaign_manager/tests"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]
exclude_also = ["if TYPE_CHECKING:"]

[tool.isort]
profile = "black"
skip = ["docs", ".github", ".vscode", "container", "env", "env311", "build"]

[tool.ruff]
line-length = 120
exclude = ["docs", ".github", ".vscode", "container", "env", "env311", "build"]
